Update java tutorials after testing under Ubuntu 20.04